# llamaindex-quickstart

./: .env.example  README.md  pyproject.toml  sample_long_text.txt  test_workflow.py
src/: app.py  main.py
src/multi_agent_assistant/: main.py  multi_agent_assistant.py
static/: script.js  style.css
templates/: index.html
