[project]
name = "llamaindex-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index>=0.12.49",
    "llama-index-llms-google-genai>=0.2.5",
    "llama-index-tools-google>=0.5.0",
    "llama-index-utils-workflow>=0.3.5",
    "ruff>=0.12.4",
]
